kubernetes/config/components/prometheus/ingress.yml
#@ load("@ytt:data", "data")

#@ if/end data.values.prometheus.enabled:
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  labels:
    app.kubernetes.io/component: prometheus
spec:
  ingressClassName: #@ data.values.ingress.className
  rules:
    - http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  name: http
